syntax = "proto3";

package sumPackage;

service SumService{
    rpc Sum(SumRequest) returns(SumResponse){};
}

message Sum{
    int32 value1 = 1;
    int32 value2 = 2;
}


message SumRequest{
    Sum sum=1;
}

message SumResponse{
    int32 result=1;
}